# multiagent-ai-plataform

./: .env.example  .gitignore  ARQUITECTURA_DETALLADA.md  CONFIGURACION.md  DESPLIEGUE.md  PROJECT_CONTEXT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/agents/graph/: agent_graph_service.py  orchestrator_graph.py  prompts.py  state.py
app/agents/orchestrator/: supervisor_node.py
app/agents/specialized/: specialized_agent_node.py
app/api/: exception_handlers.py
app/api/v1/: router.py
app/api/v1/endpoints/: agents.py  chat.py  documents.py  health.py
app/application/services/: chat_orchestration_service.py  create_agent_service.py  delete_document_service.py  search_knowledge_service.py  upload_document_service.py  vector_ingestion_service.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/domain/entities/: entities.py
app/domain/interfaces/: repositories.py
app/infrastructure/bedrock/: bedrock_client.py
app/infrastructure/db/: session.py
app/infrastructure/db/migrations/: env.py  schema_reference.sql
app/infrastructure/db/models/: models.py
app/infrastructure/db/repositories/: agent_repository.py  chat_repository.py  document_repository.py
app/infrastructure/embeddings/: google_embedding_client.py
app/infrastructure/parsers/: document_parser.py
app/infrastructure/pinecone/: pinecone_client.py
app/infrastructure/storage/: s3_client.py
app/schemas/: agent_schemas.py  chat_schemas.py  document_schemas.py
docs/: FASE_8_E2E.md  demo.http  e2e_demo.py
frontend/: app.js  index.html  styles.css
